trunk/Archive/d9a8cf3b5c738f32623ab44772063863-7063104e283ed82d51a6fde7370c6e59/output
main.cpp: In function 'int main()':
main.cpp:5:5: error: 'thread' is not a member of 'std'
     std::thread t([]{
     ^
main.cpp:5:17: error: expected ';' before 't'
     std::thread t([]{
                 ^
main.cpp:7:6: error: expected primary-expression before ')' token
     });
      ^
main.cpp:7:6: error: expected ';' before ')' token
main.cpp:8:5: error: 't' was not declared in this scope
     t.join();
     ^
